--- a/visualizations/cloudiness.html
+++ b/visualizations/cloudiness.html
@@ -63,9 +63,7 @@
               <img class="lat-image" src="../assets/images/Fig3.png">
             </section>
             <section>
-              <p>This project reviewed a variety of weather data in order to identify the effect of latitude on weather phenomenon. 
-                Cloudiness, humidity, temperature, and wind speeds were sampled from a variety of locations around the world.
-                Each of these variables was plotted against the location's latitude for to determine which weather phenomena are most affected by proximity to the equator.
+              <p>Scatterplotting of cloudiness in relation to latitude doesn't reveal any strong correllation between latitude and clouds.  There is a slightly higher concentration of cloudiness measured in cities in the northern hemisphere, but this may be explained by the higher concentration of northern cities in the data sample. 
               </p>
             </section>
           </section>
