--- a/visualizations/humidity.html
+++ b/visualizations/humidity.html
@@ -63,9 +63,7 @@
               <img class="lat-image" src="../assets/images/Fig2.png">
             </section>
             <section>
-              <p>This project reviewed a variety of weather data in order to identify the effect of latitude on weather phenomenon. 
-                Cloudiness, humidity, temperature, and wind speeds were sampled from a variety of locations around the world.
-                Each of these variables was plotted against the location's latitude for to determine which weather phenomena are most affected by proximity to the equator.
+              <p>There does not appear to be a strong correlation between latitude and humidity based on the data in the chart above. There appear to be slightly more cities with high humidity in higher nothern latitudes, but this may be due to there being a greater percentage of cities in the northern latitudes in the dataframe.
               </p>
             </section>
           </section>
