--- a/visualizations/temp.html
+++ b/visualizations/temp.html
@@ -63,9 +63,7 @@
               <img class="lat-image" src="../assets/images/Fig1.png">
             </section>
             <section>
-              <p>This project reviewed a variety of weather data in order to identify the effect of latitude on weather phenomenon. 
-                Cloudiness, humidity, temperature, and wind speeds were sampled from a variety of locations around the world.
-                Each of these variables was plotted against the location's latitude for to determine which weather phenomena are most affected by proximity to the equator.
+              <p>Analysis of temperature in compared to latitude shows a clear relationship between temperature and latitude. The closer to the eqator (latitude 0) a location is, the higher the maximum temperature.
               </p>
             </section>
           </section>
