--- a/visualizations/wind.html
+++ b/visualizations/wind.html
@@ -63,9 +63,7 @@
               <img class="lat-image" src="../assets/images/Fig4.png">
             </section>
             <section>
-              <p>This project reviewed a variety of weather data in order to identify the effect of latitude on weather phenomenon. 
-                Cloudiness, humidity, temperature, and wind speeds were sampled from a variety of locations around the world.
-                Each of these variables was plotted against the location's latitude for to determine which weather phenomena are most affected by proximity to the equator.
+              <p>Windspeed appears to be fairly consistant across most latitudes, although more outliers appear to occur in the northern hemisphere.  Linear regression of the scatterplot does indicate some correlation between latitude and wind speed, however. 
               </p>
             </section>
           </section>
