--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <body>
     <!-- Start of navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Latitude</a>
+      <a class="navbar-brand" href="index.html">
+        <h2>Latitude</h2>
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -55,7 +57,7 @@
     <!-- Start of container -->
     <div class = "container">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-8 col-sm-12">
           <header>
             <h2>Latitude and Weather</h2>
           </header>
@@ -71,7 +73,7 @@
             </section>
           </section>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-12">
           <header>
             <h2>Visualizations</h2>
           </header>
