--- a/visualizations/humidity.html
+++ b/visualizations/humidity.html
@@ -19,7 +19,7 @@
   <body>
     <!-- Start of navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Latitude</a>
+      <a class="navbar-brand" href="../index.html">Latitude</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -39,10 +39,10 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="comparison.html">Comparison </a>
+            <a class="nav-link" href="../comparison.html">Comparison </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="data.html">Data</a>
+            <a class="nav-link" href="../data.html">Data</a>
           </li>
           
         </ul>
