--- a/data.html
+++ b/data.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Add a title here -->
+    <title>Latitude Data</title>
 
     <!-- Boostrap Stylesheet -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" media="screen">
@@ -19,7 +20,9 @@
   <body>
     <!-- Start of navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Latitude</a>
+      <a class="navbar-brand" href="index.html">
+        <h2>Latitude</h2>
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -56,16 +59,16 @@
       <table border="1" class="dataframe">
         <thead>
           <tr style="text-align: right;">
-            <th>City_ID</th>
-            <th>City</th>
-            <th>Cloudiness</th>
-            <th>Country</th>
-            <th>Date</th>
-            <th>Humidity</th>
-            <th>Lat</th>
-            <th>Lng</th>
-            <th>Max Temp</th>
-            <th>Wind Speed</th>
+            <th class="text-center">City_ID</th>
+            <th class="text-center">City</th>
+            <th class="text-center">Cloudiness</th>
+            <th class="text-center">Country</th>
+            <th class="text-center">Date</th>
+            <th class="text-center">Humidity</th>
+            <th class="text-center">Lat</th>
+            <th class="text-center">Lng</th>
+            <th class="text-center">Max Temp</th>
+            <th class="text-center">Wind Speed</th>
           </tr>
         </thead>
         <tbody>
