--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!-- Start of navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand btn " href="index.html">
         <h2>Latitude</h2>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
     <!-- Start of container -->
     <div class = "container">
       <div class="row">
-        <div class="col-md-8 col-sm-12">
+        <div class="col-md-8 col-sm-12 main-section">
           <header>
             <h2>Latitude and Weather</h2>
           </header>
@@ -68,12 +68,16 @@
             <section>
               <p>This project reviewed a variety of weather data in order to identify the effect of latitude on weather phenomenon. 
                 Cloudiness, humidity, temperature, and wind speeds were sampled from a variety of locations around the world.
-                Each of these variables was plotted against the location's latitude for to determine which weather phenomena are most affected by proximity to the equator.
+                Each of these variables was plotted against the location's latitude for to determine which weather phenomena are most affected by proximity to the equator.</p>
+
+              <p>The data reveals that while some weather factors are have a clear correlation to latitude, other factors are less predictable. 
+                As might be expected, temperature is strongly correlated by latitude, but the other variables in this study require more in-depth analysis,
+                and may not be impacted by relative latitude. </p>
               </p>
             </section>
           </section>
         </div>
-        <div class="col-md-4 col-sm-12">
+        <div class="col-md-4 col-sm-12 vis-tiles ">
           <header>
             <h2>Visualizations</h2>
           </header>
