--- a/visualizations/humidity.html
+++ b/visualizations/humidity.html
@@ -35,10 +35,10 @@
               Plots
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="visualizations/temp.html">Max Temperature</a>
-              <a class="dropdown-item" href="visualizations/humidity.html">Humidity</a>
-              <a class="dropdown-item" href="visualizations/cloudiness.html">Cloudiness</a>
-              <a class="dropdown-item" href="visualizations/wind.html">Wind Speed</a>
+              <a class="dropdown-item" href="temp.html">Max Temperature</a>
+              <a class="dropdown-item" href="humidity.html">Humidity</a>
+              <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+              <a class="dropdown-item" href="wind.html">Wind Speed</a>
             </div>
           </li>
           <li class="nav-item">
@@ -76,16 +76,16 @@
             <h2>Visualizations</h2>
           </header>
           <section>
-            <a target="_blank" href="visualizations/temp.html">
+            <a target="_blank" href="temp.html">
               <img class="tile" src="../assets/images/Fig1.png">
             </a>
-            <a target="_blank" href="visualizations/humidity.html">
+            <a target="_blank" href="humidity.html">
               <img class="tile" src="../assets/images/Fig2.png">
             </a>
-            <a target="_blank" href="visualizations/cloudiness.html">
+            <a target="_blank" href="cloudiness.html">
               <img class="tile" src="../assets/images/Fig3.png">
             </a>
-            <a target="_blank" href="visualizations/wind.html">
+            <a target="_blank" href="wind.html">
               <img class="tile" src="../assets/images/Fig4.png">
             </a>
           </section>
